# assemblyai-api-spec

./: .gitignore  .prettierignore  .prettierrc  .spectral.yml  .vale.ini  MIGRATION_PLAN.md  PLAN.md  README.md  RESEARCH.md  asyncapi-copy.yml  asyncapi.json  asyncapi.yml  jupyter-to-mdx.py  llm-gateway.yml  openapi.json  openapi.yml  package-lock.json  package.json  pnpm-lock.yaml  pylon-agent-kb.json  pyproject.toml  streaming-token.yml  usm-streaming-u3-pro.yml  usm-streaming.yml
.fern/: id
.github/workflows/: ci.yml  csharp-sdk.yml  java-sdk.yml  postman.yml  pr.yml  preview-docs.yml  publish-docs.yml  ruby-sdk.yml
cookbook-master/audio-intelligence/: README.md
cookbook-master/core-transcription/: README.md  SDK-Node-batch.md  automatic-language-detection-route-default-language-js.md  common_errors_and_solutions.md  detecting-low-confidence-words.md  do-more-with-sdk-js.md  make.com-speaker-labels.md  subtitles.ipynb  (+2 more)
docs/: .gitignore  astro.config.mjs  code-extraction-plan.md  package.json  pnpm-lock.yaml  vercel.json
fern/: asyncapi-overrides.yml  asyncapi2-overrides.yml  disable-eu-dropdown.js  docs.yml  fern.config.json  generators.yml  getting-started-redirect.js  kapa.js  openapi-overrides.yml  pre-recorded-audio-redirect.js  pylon.js  rudderstack.js  scroll-highlighted-lines.js  usm-streaming-overrides.yml  usm-streaming-u3-pro-overrides.yml  voice-agent.js
mcp-server/: .dockerignore  Dockerfile  README.md  deploy-mcp.yml  package-lock.json  package.json  tsconfig.json
postman/: collection.json
scripts/: extract-code-blocks-prompt.md
(+2221 files in other folders)
